Both ascii-code and from-ascii extensions are working.